# ups-monitor

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  configure  configure.ac  gendist.sh  ups-monitor  ups-monitor.1  ups-monitor.desktop  ups-monitor.glade  ups-monitor.gladep  ups-monitor.spec  ups-monitor.spec.in
eggtray/: Makefile.in  eggtrayicon.c  eggtrayiconmodule.c
